Fixed menu button position on smaller screen sizes

--- a/assets/stylesheets/css/main.css
+++ b/assets/stylesheets/css/main.css
@@ -778,6 +778,9 @@ header.header-home .caption {
 @media screen and (max-width: 768px) {
   body {
     font-size: 12px !important; }
+  .menu-button-wrapper {
+    top: -10px;
+    right: 20px; }
   .feature-image img {
     max-height: 600px;
     display: block;
