--- a/assets/stylesheets/scss/_responsive.scss
+++ b/assets/stylesheets/scss/_responsive.scss
@@ -123,6 +123,11 @@
     font-size: 12px !important;
   }
 
+  .menu-button-wrapper {
+    top: -10px;
+    right:20px;
+  }
+
   .feature-image {
     img {
       max-height: 600px;
